--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,7 @@
 :root {
   --padding: 5px;
   --small-padding: 3px;
+  --big-padding: calc(var(--padding) * 3);
+  --layout-padding: calc(var(--padding) * 7);
+  --layout-border-small: 2px solid #e6e6e6;
 }
