--- a/src/components/Chat/Card/ChatCard.css
+++ b/src/components/Chat/Card/ChatCard.css
@@ -10,7 +10,7 @@
 .chat-info__logo {
   width: 20%;
   padding: var(--padding);
-  padding-bottom: calc(var(--padding) + 10px);
+  padding-bottom: var(--big-padding);
 }
 
 .chat-info__content {
@@ -31,6 +31,13 @@
   padding-bottom: var(--small-padding);
 }
 
+.chat-info__content_top__name,
+.chat-info__content_bottom__message {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .chat-info__content_top__name {
   left: 0;
   font-weight: 600;
@@ -49,7 +56,4 @@
 
 .chat-info__content_bottom__message {
   padding-left: var(--small-padding);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
