RM-4 variables were updated

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -2,4 +2,5 @@
   --chat-info-author: #7b97ce;
   --layout-background-color: #ebf2fa;
   --default-background-color: #ffffff;
+  --selected-chat-background-color: #e5e5e5;
 }
