--- a/src/components/Chat/Card/ChatCard.css
+++ b/src/components/Chat/Card/ChatCard.css
@@ -1,59 +1,70 @@
 @import '../../../styles/variables.css';
 @import '../../../styles/colors.css';
 
-.chat-info {
+.card {
   width: 360px;
   height: 80px;
+}
+
+.card.selected {
+  background-color: var(--selected-chat-background-color);
+}
+
+.card__wrapper {
+  width: 100%;
+}
+
+.card__wrapper__body {
   display: flex;
 }
 
-.chat-info__logo {
+.card__wrapper__body__logo {
   width: 20%;
   padding: var(--padding);
   padding-bottom: var(--big-padding);
 }
 
-.chat-info__content {
+.card__wrapper__body__content {
   width: 80%;
   display: flex;
   flex-direction: column;
 }
 
-.chat-info__content_top,
-.chat-info__content_bottom {
+.card__wrapper__body__content_top,
+.card__wrapper__body__content_bottom {
   height: 50%;
   display: flex;
 }
 
-.chat-info__content_top {
+.card__wrapper__body__content_top {
   justify-content: space-between;
   align-items: flex-end;
   padding-bottom: var(--small-padding);
 }
 
-.chat-info__content_top__name,
-.chat-info__content_bottom__message {
+.card__wrapper__body__content_top__name,
+.card__wrapper__body__content_bottom__message {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.chat-info__content_top__name {
+.card__wrapper__body__content_top__name {
   left: 0;
   font-weight: 600;
 }
 
-.chat-info__content_top__message-date {
+.card__wrapper__body__content_top__message-date {
   right: 0;
   padding-right: 10px;
   opacity: 0.5;
 }
 
-.chat-info__content_bottom__author {
+.card__wrapper__body__content_bottom__author {
   color: var(--chat-info-author);
   white-space: nowrap;
 }
 
-.chat-info__content_bottom__message {
+.card__wrapper__body__content_bottom__message {
   padding-left: var(--small-padding);
 }
