--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -3,4 +3,5 @@
   --layout-background-color: #ebf2fa;
   --default-background-color: #ffffff;
   --selected-chat-background-color: #e5e5e5;
+  --service-message-background-color: #eaeae9;
 }
