--- a/src/core/MainLayout/MainLayout.css
+++ b/src/core/MainLayout/MainLayout.css
@@ -3,15 +3,25 @@
 
 .layout {
   height: 100vh;
+  display: flex;
   background-color: var(--layout-background-color);
-  padding-left: var(--big-padding);
-  padding-bottom: var(--layout-padding);
+  padding: var(--spacing-large);
+  padding-bottom: var(--spacing-largest);
+}
+
+.layout__sidebar,
+.layout__content {
+  background-color: var(--default-background-color);
 }
 
 .layout__sidebar {
   width: 380px;
   height: 100%;
   overflow: auto;
-  background-color: var(--default-background-color);
-  border-right: var(--layout-border-small);
+  border-right: var(--border-small);
+}
+
+.layout__content {
+  width: calc(100% - 380px);
+  padding: var(--spacing-large) 0;
 }
