--- a/src/components/Main/Layout/MainLayout.css
+++ b/src/components/Main/Layout/MainLayout.css
@@ -1,5 +1,5 @@
-@import "../../styles/variables.css";
-@import "../../styles/colors.css";
+@import "../../../styles/variables.css";
+@import "../../../styles/colors.css";
 
 .layout {
   height: 100vh;
