--- a/src/components/Chat/Card/Message/ChatCardMessage.css
+++ b/src/components/Chat/Card/Message/ChatCardMessage.css
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.css";
-@import "../../../styles/colors.css";
+@import "../../../../styles/variables.css";
+@import "../../../../styles/colors.css";
 
 .card-message {
   width: 100%;
