--- a/src/components/Chat/Card/Meta/ChatCardMeta.css
+++ b/src/components/Chat/Card/Meta/ChatCardMeta.css
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.css";
-@import "../../../styles/colors.css";
+@import "../../../../styles/variables.css";
+@import "../../../../styles/colors.css";
 
 .card-meta {
   left: 0;
