RM-10 global styles was updated

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,9 @@ code {
   font-size: inherit;
   background-color: transparent;
 }
+
+.link-reset {
+  text-decoration: none;
+  cursor: default;
+  color: inherit;
+}
