--- a/src/components/Chat/Card/ChatCard.css
+++ b/src/components/Chat/Card/ChatCard.css
@@ -28,8 +28,10 @@
 
 .card__info {
   width: 100%;
-  display: flex;
   flex-direction: column;
   overflow: hidden;
-  justify-content: center;
+}
+
+.card__info.center {
+  align-items: normal;
 }
