--- a/src/components/Chat/MessageBox/ChatMessageBox.css
+++ b/src/components/Chat/MessageBox/ChatMessageBox.css
@@ -1,17 +1,44 @@
-@import '../../../styles/variables.css';
+@import "../../../styles/variables.css";
 
 .message-box-wrap {
   margin: 0 auto;
   max-width: 560px;
+  width: 100%;
   padding: var(--message-box-padding);
 }
 
 .message-box {
-  height: var(--message-box-height);
+  display: flex;
+}
+
+.message-box-label {
+  flex: 1;
 }
 
 .message-box-control {
-  height: 100%;
+  min-height: 30px;
+  height: auto;
   width: 100%;
   resize: none;
+  font-size: 12px;
+  border: none;
+  overflow: hidden scroll;
+  display: block;
+  box-shadow: 0 1px 0 0 #e8e8e8;
+  -ms-overflow-style: none;
+}
+
+.message-box-control::-webkit-scrollbar {
+  display: none;
+}
+
+.message-box-control:focus {
+  box-shadow: none;
+  outline: none;
+  box-shadow: 0 2px 0 0 #77b7e4;
+}
+
+.message-box-button {
+  align-self: flex-end;
+  outline: none;
 }
