--- a/src/components/Core/Auth/Auth.css
+++ b/src/components/Core/Auth/Auth.css
@@ -1,38 +1,39 @@
-@import '../../../styles/colors.css';
+@import "../../../styles/colors.css";
+
+.auth-form-container {
+  height: 100vh;
+}
 
 .auth-form-wrap {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  box-shadow: 1px 2px 2px 3px rgba(0,0,0,0.1);
+  padding: 30px;
+  width: 400px;
+  min-height: 150px;
+  border-radius: 10px;
+}
+
+.auth-form-header {
+  padding-left: 20px;
+  text-align: initial;
+  text-transform: uppercase;
 }
 
 .auth-form {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 10px;
-  border-radius: 10px;
-  border: solid 1px;
-  min-height: 150px;
-  width: 400px;
-}
-
-.label {
-  text-align: initial;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   padding: 10px;
 }
 
-.register-form-button {
-  align-self: flex-end;
-  margin: 10px;
+.auth-form__actions {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
-.error {
-  color: var(--form-validation-error-color);
+.auth-form__button {
+  align-self: flex-end;
+  text-transform: capitalize;
+}
+
+.auth-form__button:hover {
+  color: #77b7e4;
 }
