--- a/src/components/Main/Sidebar/MainSidebar.css
+++ b/src/components/Main/Sidebar/MainSidebar.css
@@ -6,7 +6,6 @@
   width: 40%;
   max-width: 380px;
   height: 100%;
-  overflow: auto;
   border-right: var(--border-small);
   background-color: var(--default-background-color);
 }
@@ -19,4 +18,9 @@
     width: 100%;
     max-width: 100vw;
   }
+}
+
+.sidebar-content-wrap {
+  overflow: auto;
+  height: 100%;
 }
