--- a/src/components/Core/Auth/Auth.css
+++ b/src/components/Core/Auth/Auth.css
@@ -1,4 +1,5 @@
 @import "../../../styles/colors.css";
+@import "../../../styles/variables.css";
 
 .auth-form-container {
   height: 100vh;
@@ -6,10 +7,10 @@
 
 .auth-form-wrap {
   box-shadow: 1px 2px 2px 3px rgba(0,0,0,0.1);
-  padding: 30px;
   width: 400px;
   min-height: 150px;
-  border-radius: 10px;
+  padding: calc(var(--spacing-largest) - var(--spacing-base));
+  border-radius: var(--spacing-base);
 }
 
 .auth-form-header {
@@ -27,6 +28,7 @@
   display: flex;
   width: 100%;
   justify-content: space-around;
+  padding: var(--spacing-base) var(--spacing-half);
 }
 
 .auth-form__button {
