--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,4 +5,6 @@
   --selected-chat-background-color: #e5e5e5;
   --service-message-background-color: #eaeae9;
   --form-validation-error-color: #ff0000;
+  --shadow-base-color: #e8e8e8;
+  --shadow-focus-color: #77b7e4;
 }
