--- a/src/shared/FormField/FormField.css
+++ b/src/shared/FormField/FormField.css
@@ -1,10 +1,13 @@
+@import "../../styles/variables.css";
+@import "../../styles/colors.css";
+
 .form-field {
   text-align: initial;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 5px 10px;
+  padding: var(--spacing-half) var(--spacing-base);
   height: 80px;
 }
 
@@ -14,14 +17,14 @@
 
 .form-field__control {
   border: none;
-  box-shadow: 0 1px 0 0 #e8e8e8;
-  padding: 0 5px;
+  box-shadow: 0 1px 0 0 var(--shadow-base-color);
+  padding: 0 var(--spacing-half);
 }
 
 .form-field__control:focus {
   box-shadow: none;
   outline: none;
-  box-shadow: 0 2px 0 0 #77b7e4;
+  box-shadow: 0 2px 0 0 var(--shadow-focus-color);
 }
 
 .form-field__error {
