--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -6,7 +6,7 @@
   --spacing-large: 15px;
   --spacing-double: 20px;
   --spacing-largest: 35px;
-  --border-small: 3px solid #e6e6e6;
+  --border-small: 3px solid var(--shadow-base-color);
   --avatar-width: 42px;
   --message-box-height: 100px;
   --message-box-padding: var(--spacing-base) var(--spacing-large) var(--spacing-largest);
